--- a/src/main/resources/stats.yml
+++ b/src/main/resources/stats.yml
@@ -1,17 +1,48 @@
+# =========================================================
+#  Player Stats Menu Configuration
+#  Status: In Development
+# =========================================================
+#
+#  This menu defines the player stats overview GUI.
+#  Each stat entry is fully configurable and optional.
+#
+#  You can:
+#   • Reorder stats via slot
+#   • Disable stats by removing entries
+#   • Change icons, names and value paths
+#
+#  Slot range: 0–53 (6 rows)
+# =========================================================
+
 menu:
+  # Title shown at the top of the inventory
   title: "Your Stats"
+
+  # Inventory size (must be multiple of 9)
   size: 54
 
 stats:
 
+  # -------------------------------------------------------
+  # Base Health
+  # -------------------------------------------------------
+  # Represents the player's core health pool.
+  # Usually increased via leveling or gear.
+  #
   health:
     name: "❤ Health"
     slot: 0
-    value-path: "player.health"
-    level-path: "player.level.health"
-    next-path: "player.next.health"
+    value-path: "player.health"          # Current stat value
+    level-path: "player.level.health"    # Current stat level
+    next-path: "player.next.health"      # Value required for next level
     icon: "HEART_OF_THE_SEA"
 
+  # -------------------------------------------------------
+  # Bonus Health
+  # -------------------------------------------------------
+  # Additional health on top of base health.
+  # Often granted by perks, items or buffs.
+  #
   bonus_health:
     name: "❤+ Health+"
     slot: 10
@@ -20,6 +51,9 @@ stats:
     next-path: "player.next.health"
     icon: "GOLDEN_APPLE"
 
+  # -------------------------------------------------------
+  # Armor (Vanilla-style damage reduction)
+  # -------------------------------------------------------
   armor:
     name: "⛨ Defense"
     slot: 45
@@ -28,6 +62,12 @@ stats:
     next-path: "player.next.armor"
     icon: "SHIELD"
 
+  # -------------------------------------------------------
+  # Advanced Defense
+  # -------------------------------------------------------
+  # Non-vanilla damage mitigation (RPG-style).
+  # Can be used for custom formulas.
+  #
   defense:
     name: "⛨+ Defense+"
     slot: 37
@@ -36,14 +76,9 @@ stats:
     next-path: "player.next.defense"
     icon: "NETHERITE_SCRAP"
 
-  extra_damage:
-    name: "⚔ Extra Dmg"
-    slot: 8
-    value-path: "player.extra_damage"
-    level-path: "player.level.extra_damage"
-    next-path: "player.next.extra_damage"
-    icon: "ANVIL"
-
+  # -------------------------------------------------------
+  # Base Damage
+  # -------------------------------------------------------
   damage:
     name: "⚔ Damage"
     slot: 5
@@ -52,6 +87,20 @@ stats:
     next-path: "player.next.damage"
     icon: "DIAMOND"
 
+  # -------------------------------------------------------
+  # Extra Damage (additive bonus)
+  # -------------------------------------------------------
+  extra_damage:
+    name: "⚔ Extra Dmg"
+    slot: 8
+    value-path: "player.extra_damage"
+    level-path: "player.level.extra_damage"
+    next-path: "player.next.extra_damage"
+    icon: "ANVIL"
+
+  # -------------------------------------------------------
+  # Critical Hit Chance
+  # -------------------------------------------------------
   crit_chance:
     name: "✨ Crit Chance"
     slot: 43
@@ -60,6 +109,9 @@ stats:
     next-path: "player.next.crit"
     icon: "AMETHYST_SHARD"
 
+  # -------------------------------------------------------
+  # Critical Damage Multiplier
+  # -------------------------------------------------------
   crit_multiplier:
     name: "✨ Crit Multiplicator"
     slot: 53
@@ -68,6 +120,11 @@ stats:
     next-path: "player.next.crit_multiplier"
     icon: "GLOWSTONE_DUST"
 
+  # -------------------------------------------------------
+  # Lifesteal
+  # -------------------------------------------------------
+  # Converts a percentage of dealt damage into health.
+  #
   lifesteal:
     name: "⚡ Lifesteal"
     slot: 16
@@ -76,6 +133,9 @@ stats:
     next-path: "player.next.lifesteal"
     icon: "NETHER_WART"
 
+  # -------------------------------------------------------
+  # Movement Speed
+  # -------------------------------------------------------
   movement_speed:
     name: "🩸 Move Speed"
     slot: 20
@@ -84,6 +144,9 @@ stats:
     next-path: "player.next.movement_speed"
     icon: "DIAMOND_BOOTS"
 
+  # -------------------------------------------------------
+  # Attack Speed
+  # -------------------------------------------------------
   attack_speed:
     name: "⚡ Attack Speed"
     slot: 24
@@ -92,6 +155,11 @@ stats:
     next-path: "player.next.attack_speed"
     icon: "WIND_CHARGE"
 
+  # -------------------------------------------------------
+  # Luck
+  # -------------------------------------------------------
+  # Influences drop chances, rolls and RNG-based systems.
+  #
   luck:
     name: "🍀 Luck"
     slot: 29
@@ -100,6 +168,9 @@ stats:
     next-path: "player.next.luck"
     icon: "RABBIT_FOOT"
 
+  # -------------------------------------------------------
+  # Knockback Resistance
+  # -------------------------------------------------------
   knockback_resistance:
     name: "🛑 Knockback Res."
     slot: 33
@@ -108,7 +179,26 @@ stats:
     next-path: "player.next.knockback_resistance"
     icon: "HEAVY_CORE"
 
+
+# =========================================================
+#  Status Tier System
+# =========================================================
+#
+#  Each tier array defines progression breakpoints.
+#  Index = level, value = stat increase at that level.
+#
+#  You can:
+#   • Add more tiers for longer progression
+#   • Reduce tiers for shorter servers
+#   • Fine-tune balance per stat
+#
+#  IMPORTANT:
+#  Tier count should match your max stat level.
+# =========================================================
+
 status_system:
+
+  # Health tiers (total max health)
   health_tiers:
     - 10
     - 16
@@ -121,6 +211,7 @@ status_system:
     - 81
     - 93
 
+  # Armor tiers (vanilla-style armor points)
   armor_tiers:
     - 5
     - 12
@@ -133,6 +224,7 @@ status_system:
     - 66
     - 79
 
+  # Base damage tiers
   damage_tiers:
     - 7
     - 13
@@ -145,6 +237,7 @@ status_system:
     - 74
     - 85
 
+  # Extra damage tiers (additive bonus)
   extra_damage_tiers:
     - 5
     - 10
@@ -157,6 +250,7 @@ status_system:
     - 80
     - 90
 
+  # Critical hit chance tiers (%)
   crit_tiers:
     - 7
     - 14
@@ -169,6 +263,7 @@ status_system:
     - 63
     - 70
 
+  # Critical damage multiplier tiers (%)
   crit_multiplier_tiers:
     - 10
     - 20
@@ -181,7 +276,7 @@ status_system:
     - 90
     - 100
 
-
+  # Lifesteal tiers (%)
   lifesteal_tiers:
     - 5
     - 10
@@ -194,6 +289,7 @@ status_system:
     - 45
     - 50
 
+  # Advanced defense tiers
   defense_tiers:
     - 3
     - 8
@@ -207,6 +303,7 @@ status_system:
     - 71
     - 80
 
+  # Movement speed tiers (added to base speed)
   movement_speed_tiers:
     - 0.01
     - 0.02
@@ -219,6 +316,7 @@ status_system:
     - 0.09
     - 0.10
 
+  # Attack speed tiers
   attack_speed_tiers:
     - 0.5
     - 1.0
@@ -231,6 +329,7 @@ status_system:
     - 4.5
     - 5.0
 
+  # Knockback resistance tiers (0.0–1.0)
   knockback_resistance_tiers:
     - 0.05
     - 0.10
@@ -243,6 +342,7 @@ status_system:
     - 0.80
     - 0.90
 
+  # Luck tiers (flat value)
   luck_tiers:
     - 1
     - 2
