--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: TheMob
-version: "1.0.0"
+version: "1.3.0"
 main: org.plugin.theMob.TheMob
 api-version: "1.21"
 author: 3o3y
@@ -16,6 +16,7 @@ commands:
       /mob spawn <mob-id>
       /mob autospawn <mob-id> <interval-seconds> <max-alive>
       /mob del autospawn <mob-id>
+      /mob list autospawn
       /mob killall
       /mob reload
     permission: themob.use
